# C_and_C_plus_plus

./: README.md
C_language/: .gitignore  CMakeLists.txt
C_language/Basic1/: atributes.c  caracteres.c
C_language/Basic2/: casting.c  celsius_to_fahrenheit.c  convert_analogic_to_digital.c  convert_minutes_to_hours.c  current_divisor.c  cylinder_volume_keyboard_input.c  data_types.c  frequency_corte_filtro_passabaixas.c  keyboard_input.c  lei_de_ohm.c  logical_values.c  real_numbers.c  simple_calc.c  sum_2_numbers.c  tests_and_conditions.c  verify_equals_values.c
C_language/Basic3/: check_relation_operators_input.c  console_alert_voltage_batery.c  detecting_uppercase_lowercase_switch.c  guessing_game.c  identify_range_between_10_20.c  logical_operators.c  menu_using_if_eletronic_eng_functions.c  option_uppercase_lowercase.c  register_correction.c  relational_operators.c  robot_distance_sensor.c  salary_bonus_ternary.c  salary_bonus_to_seller.c  sensor_water_temperature.c  show_descendent_order_2_values.c  show_marital_status_switch.c  simple_calc_with_if.c  students_loans_switch.c  switch_example.c  temperature_status.c  ternary_operator.c  test_if_is_zero.c  transport_benefits.c  turn_on_termostater.c
C_language/Intermediate1/: break_example.c  change_caracter_2_position_further.c  complete_times_table.c  compost_atribution.c  even_continue_odd_break.c  fibonacci.c  for_loop_example.c  for_loop_guess_game.c  for_loop_pairs_0_50.c  increment_decrement.c  increment_decrement_example.c  increment_decrement_example2.c  infinite_loop_example.c  inifinite_for_loop.c  memory_map_for_loop.c  menu_customer_signup.c  menu_example_1.c  nest_for_loop.c  show_range_frequency_screen.c  (+4 more)
(+92 files in other folders)
