cmake_minimum_required(VERSION 3.23)
project(C_language C)

set(CMAKE_C_STANDARD 11)

add_executable(temperature_sensor_reader advanced2/temperature_sensor_reader.c)
add_executable(binary_partitions_by_fseek advanced2/binary_partitions_by_fseek.c advanced2/enum.c advanced2/typedef_examples.c advanced2/simple_users_signup.c)
add_executable(struct_using_pointer advanced2/struct_using_pointer.c)
add_executable(saving_hex_file_by_union advanced2/saving_hex_file_by_union.c)
set_target_properties(saving_hex_file_by_union PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/advanced2/")
add_executable(read_file_any_place advanced2/read_file_any_place.c)
set_target_properties(read_file_any_place PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/advanced2/")
add_executable(enum advanced2/enum.c)
set_target_properties(enum PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/advanced2/")
add_executable(direct_access_pointer advanced2/direct_access_pointer.c)
add_executable(typedef_examples advanced2/typedef_examples.c)
add_executable(simple_users_signup advanced2/simple_users_signup.c)
add_executable(bitwise_operation_examples advanced2/bitwise_operation_examples.c)
add_executable(mask_bits advanced2/mask_bits.c)
add_executable(inverting_a_bit_by_xor advanced2/inverting_a_bit_by_xor.c)
add_executable(bit_fields_examples advanced2/bit_fields_examples.c)
add_executable(digital_sensor_celsius_fahrenheit advanced2/digital_sensor_celsius_fahrenheit.c)
add_executable(dynamic_memory_example advanced2/dynamic_memory_example.c)